Changed container from id to class for CSS purposes

--- a/Games.html
+++ b/Games.html
@@ -40,14 +40,14 @@
 	    .grouvee_box>div>h2>a{
 	    	color: black;
 	    }
-	    #container {
+	    .top_container {
 		    display: flex;
 		    justify-content: center;
 		    max-width: 1000px;
 		    margin: auto;
 		}
 	</style>
-	<div id="container">
+	<div class="top_container">
 		<div class="grouvee_box">
 			<div id="grouvee_widget_141977">
 			</div>
