top_container class replaced by tabcontent, archived tab hidden at startup

--- a/Games.html
+++ b/Games.html
@@ -75,7 +75,7 @@
 			<script src="https://www.grouvee.com/widgets/shelf/141978/?number=20" type="text/javascript" charset="utf-8"></script>
 		</div>
 	</div>
-	<div class="tabcontent" id="archived_games">Test</div>
+	<div class="tabcontent" id="archived_games" style="display:none">Test</div>
 	<script type="text/javascript">
 		function scrub(text) {
 			return text.split(' ').slice(1,-2).join(' ');
