widenned lists on archived page to accomodate single column

--- a/Games.html
+++ b/Games.html
@@ -40,6 +40,13 @@
 	    .grouvee_box>div>h2>a{
 	    	color: black;
 	    }
+	    #archived_games>.grouvee_box {
+	    	max-width: 900px;
+	    }
+	    #archived_games>.grouvee_box>div,
+	    #archived_games>.grouvee_box>div>h2 {
+	    	min-width: 900px;
+	    }
 	    .tabcontent {
 		    display: flex;
 		    justify-content: center;
