Added automatic column sizing to CSS

--- a/Games.html
+++ b/Games.html
@@ -25,30 +25,23 @@
 	    .grouvee_box {
 	    	display:flex;
 	    	flex-wrap: wrap;
-	    	max-width: 450px;
 	    	margin:auto;
 	    	justify-content: center;
+	    	flex: 1;
 	    }
 	    .grouvee_box>div {
-			min-width: 450px;
 	    	display:flex;
 	    	flex-wrap: wrap;
 	    	justify-content: center;
+	    	min-width:100%;
 	    }
 	    .grouvee_box>div>h2 {
 	    	font-family: tahoma;
-	    	min-width:450px;
+	    	min-width:100%;
 	    	text-align: center;
 	    }
 	    .grouvee_box>div>h2>a{
 	    	color: black;
-	    }
-	    #archived_games>.grouvee_box {
-	    	max-width: 900px;
-	    }
-	    #archived_games>.grouvee_box>div,
-	    #archived_games>.grouvee_box>div>h2 {
-	    	min-width: 900px;
 	    }
 	    .tabcontent {
 		    display: flex;
