--- a/Games.html
+++ b/Games.html
@@ -76,44 +76,6 @@
 			border-bottom: 3px solid #dd4b39;
 		}
 	</style>
-	<div id="tab_bar">
-		<a href="javascript:rudrSwitchTab('tb_1', 'active_games');" id="tb_1" class="tabmenu active">Active</a>
-		<a href="javascript:rudrSwitchTab('tb_2', 'archived_games');" id="tb_2" class="tabmenu">Archived</a>
-	</div>
-	<div class="tabcontent" id="active_games">
-		<div class="grouvee_box">
-			<div id="grouvee_widget_141977">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/141977/?number=20" type="text/javascript" charset="utf-8"></script>
-			<div id="grouvee_widget_142193">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/142193/?number=20" type="text/javascript" charset="utf-8"></script>
-			<div id="grouvee_widget_142000">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/142000/?number=20" type="text/javascript" charset="utf-8"></script>
-			<div id="grouvee_widget_141979">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/141979/?number=20" type="text/javascript" charset="utf-8"></script>
-		</div>
-		<div class="grouvee_box">
-			<div id="grouvee_widget_141976">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/141976/?number=20" type="text/javascript" charset="utf-8"></script>
-			<div id="grouvee_widget_141978">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/141978/?number=20" type="text/javascript" charset="utf-8"></script>
-		</div>
-	</div>
-	<div class="tabcontent" id="archived_games">
-		<div class="grouvee_box">
-			<div id="grouvee_widget_141975">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/141975/?number=20" type="text/javascript" charset="utf-8"></script>
-			<div id="grouvee_widget_148530">
-			</div>
-			<script src="https://www.grouvee.com/widgets/shelf/148530/?number=20" type="text/javascript" charset="utf-8"></script>
-		</div>
-	</div>
 	<script type="text/javascript">
 		function scrub(text) {
 			return text.split(' ').slice(1,-2).join(' ');
@@ -121,11 +83,76 @@
 		function fixlink(link){
 			return "http://grouvee.com/"+link.substring(8);
 		}
-		var elements = document.getElementsByTagName("h2");
+		/*var elements = document.getElementsByTagName("h2");
 		for (element of elements){
 			element.firstElementChild.innerText = scrub(element.firstElementChild.innerText);
 			element.firstElementChild.href = fixlink(element.firstElementChild.href);
-		}	
+		}	*/
+
+		function cleanup(widget){
+			//alert(widget.childElementCount);
+			widget.firstElementChild.firstElementChild.innerText = scrub(widget.firstElementChild.firstElementChild.innerText);
+			widget.firstElementChild.firstElementChild.href = fixlink(widget.firstElementChild.firstElementChild.href);
+		}
+
+		function addChild(parent, type, className, id, href){
+			var child = document.createElement(type||"div");
+			if(className){
+				child.className = className;
+			}
+			if(id){
+				child.id = id;
+			}
+			if(href){
+				child.href = href;
+			}
+			parent.appendChild(child);
+			return child;
+		}
+
+		function addScript(parent, url, widget){
+			var script = document.createElement("script");
+			script.src = url;
+			script.type = "text/javascript";
+			script.charset = "utf-8";
+
+			if(widget){
+				script.addEventListener('load',function(){cleanup(document.getElementById(widget));});
+			}
+
+			parent.appendChild(script);
+			return script;
+		}
+
+		var shelfTabs = {
+			"Active": [[141977,142193,142000,141979],[141976,141978]],
+			"Archived": [[141975,148530]]
+		};
+
+		var root = document.getElementsByTagName("body")[0];
+		var tabs = addChild(root,"div",null,"tab_bar");
+		var index = 1;
+
+		for(var tab in shelfTabs){
+			var tabButtonId = `tb_${index}`;
+			var tabId = `${tab.toLowerCase()}_games`;
+			addChild(tabs,"a","tabmenu"+(index === 1?" active":""), tabButtonId, `javascript:rudrSwitchTab('${tabButtonId}', '${tabId}');`).appendChild(document.createTextNode(tab));
+
+			var tabcontent = addChild(root,"div","tabcontent",tabId);
+
+			for(var column in shelfTabs[tab]){
+				var gb = addChild(tabcontent, "div", "grouvee_box");
+
+				for(var shelf in shelfTabs[tab][column]){
+					var shelfid = shelfTabs[tab][column][shelf];
+					var widgetname = `grouvee_widget_${shelfid}`
+					addChild(gb,"div",null,widgetname);
+					addScript(gb,`https:\/\/www.grouvee.com\/widgets\/shelf\/${shelfid}\/?number=20`, widgetname);
+				}
+			}
+			index++;
+		}
+		//alert("init done");
 		// Source for below: https://rudrastyh.com/javascript/tabs.html
 		function rudrSwitchTab(rudr_tab_id, rudr_tab_content) {
 			// first of all we get all tab content blocks (I think the best way to get them by class names)
@@ -145,7 +172,47 @@
 			document.getElementById(rudr_tab_id).className = 'tabmenu active';
 		}
 
-		document.getElementById("archived_games").style = "display:none";
+		//document.getElementById("archived_games").style = "display:none";
 	</script>
+	<!--div id="content">
+		<div id="tab_bar">
+			<a href="javascript:rudrSwitchTab('tb_1', 'active_games');" id="tb_1" class="tabmenu active">Active</a>
+			<a href="javascript:rudrSwitchTab('tb_2', 'archived_games');" id="tb_2" class="tabmenu">Archived</a>
+		</div>
+		<div class="tabcontent" id="active_games">
+			<div class="grouvee_box">
+				<div id="grouvee_widget_141977">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/141977/?number=20" type="text/javascript" charset="utf-8"></script>
+				<div id="grouvee_widget_142193">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/142193/?number=20" type="text/javascript" charset="utf-8"></script>
+				<div id="grouvee_widget_142000">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/142000/?number=20" type="text/javascript" charset="utf-8"></script>
+				<div id="grouvee_widget_141979">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/141979/?number=20" type="text/javascript" charset="utf-8"></script>
+			</div>
+			<div class="grouvee_box">
+				<div id="grouvee_widget_141976">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/141976/?number=20" type="text/javascript" charset="utf-8"></script>
+				<div id="grouvee_widget_141978">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/141978/?number=20" type="text/javascript" charset="utf-8"></script>
+			</div>
+		</div>
+		<div class="tabcontent" id="archived_games">
+			<div class="grouvee_box">
+				<div id="grouvee_widget_141975">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/141975/?number=20" type="text/javascript" charset="utf-8"></script>
+				<div id="grouvee_widget_148530">
+				</div>
+				<script src="https://www.grouvee.com/widgets/shelf/148530/?number=20" type="text/javascript" charset="utf-8"></script>
+			</div>
+		</div>
+	</div-->
 </body>
 </html>
