--- a/Games.html
+++ b/Games.html
@@ -87,7 +87,8 @@
 
 		var settings = {
 			hideEmptyShelves: true,
-			showTabBar: Object.keys(shelfTabs).length > 1
+			showTabBar: Object.keys(shelfTabs).length > 1,
+			initialTab: 1
 		}
 		// --- IGNORE THE REST ---
 
@@ -162,25 +163,29 @@
 		}
 
 		var root = document.getElementsByTagName("body")[0];
-		var index = 1;
+		var tabIndex = 1;
 
 		if(settings.showTabBar){
 			var tabs = addChild(root,"div",null,"tab_bar");
+		}
+
+		function isInitialTab(index){
+			return index == settings.initialTab
 		}
 
 		for(var tab in shelfTabs){
 			var tabId = `${tab.toLowerCase()}_games`;
 
 			if(settings.showTabBar){
-				var tabButtonId = `tb_${index}`;
-				addChild(tabs,"a","tabmenu"+(index == 1?" active":""), tabButtonId, `javascript:rudrSwitchTab('${tabButtonId}', '${tabId}');`).appendChild(document.createTextNode(tab));
+				var tabButtonId = `tb_${tabIndex}`;
+				addChild(tabs,"a","tabmenu"+(isInitialTab(tabIndex)?" active":""), tabButtonId, `javascript:rudrSwitchTab('${tabButtonId}', '${tabId}');`).appendChild(document.createTextNode(tab));
 			}
 
 			var tabcontent = addChild(root,"div","tabcontent",tabId);
 
-			generateTabPage(addChild(tabcontent, "div", "grouvee_box"),shelfTabs[tab],index!=1);
+			generateTabPage(addChild(tabcontent, "div", "grouvee_box"),shelfTabs[tab],!isInitialTab(tabIndex));
 
-			index++;
+			tabIndex++;
 		}
 
 		// Source for below: https://rudrastyh.com/javascript/tabs.html
