--- a/Games.html
+++ b/Games.html
@@ -16,6 +16,7 @@
 		var settings = {
 			hideEmptyShelves: true,
 			showTabBar: Object.keys(shelfTabs).length > 1,
+			fixShelfLinks: true,
 			initialTab: 1,
 			root: document.getElementsByTagName("body")[0]
 		}
@@ -105,7 +106,9 @@
 
 		function cleanup(widget, hideTabAfterLoad){
 			widget.firstElementChild.firstElementChild.innerText = extractShelfName(widget.firstElementChild.firstElementChild.innerText);
-			widget.firstElementChild.firstElementChild.href = fixLink(widget.firstElementChild.firstElementChild.href);
+			if(settings.fixShelfLinks){
+				widget.firstElementChild.firstElementChild.href = fixLink(widget.firstElementChild.firstElementChild.href);
+			}
 
 			if(settings.hideEmptyShelves && widget.childElementCount == 1){
 				widget.style = "display:none"
