fixlink uses https now

--- a/Games.html
+++ b/Games.html
@@ -101,7 +101,7 @@
 			return text.split(' ').slice(1,-2).join(' ');
 		}
 		function fixLink(link){
-			return "http://grouvee.com/"+link.substring(8);
+			return "https://grouvee.com/"+link.substring(8);
 		}
 
 		function cleanup(widget, hideTabAfterLoad){
