changes fixedLink for github pages use

--- a/Games.html
+++ b/Games.html
@@ -16,7 +16,7 @@
 		var settings = {
 			hideEmptyShelves: true,
 			showTabBar: Object.keys(shelfTabs).length > 1,
-			fixShelfLinks: true,
+			fixShelfLinks: false,
 			initialTab: 1,
 			root: document.getElementsByTagName("body")[0]
 		}
