added visual novel shelves

--- a/Games.html
+++ b/Games.html
@@ -10,6 +10,7 @@
 		// Switch the shelves and tab names for your own:
 		var shelfTabs = {
 			"Active": [[141977,142193,142000,141979],[141976,141978]],
+			"Visual Novels": [[262456, 262457], [262458, 262459]],
 			"Archived": [[141975,148530]]
 		};
 
