Changed Active tab name to Games

--- a/Games.html
+++ b/Games.html
@@ -9,7 +9,7 @@
 		// ---- EDIT HERE ----
 		// Switch the shelves and tab names for your own:
 		var shelfTabs = {
-			"Active": [[141977,142193,142000,141979],[141976,141978]],
+			"Games": [[141977,142193,142000,141979],[141976,141978]],
 			"Visual Novels": [[262456, 262457], [262458, 262459]],
 			"Archived": [[141975,148530]]
 		};
