Added styling to broken image links

--- a/Games.html
+++ b/Games.html
@@ -47,6 +47,28 @@
 	    	height: 90px;
 	        padding: 0px 0px;
 	        overflow: hidden;
+		display: flex;
+		text-align: center;
+	    }
+	    .grouvee_game>a {
+	    	margin:auto;
+		text-decoration: none;
+		height: 100%;
+	    }
+            .grouvee_game>a>img {
+	    	display: flex;
+		margin: auto;
+		height: 100%;
+	    }
+	    .grouvee_game>a>img:before {
+	    	font-family: tahoma;
+		font-size: 12px;
+		font-weight: bold;
+		color: black;
+		border: 1px solid black;
+		display: flex;
+		align-items: center;
+		word-wrap: break-word;
 	    }
 	    .grouvee_box {
 	    	display:flex;
